--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.6.9",
     "express": "^4.21.2",
     "morgan": "~1.9.1",
+    "punycode": "^2.3.1",
     "sqlite3": "^5.1.7"
   }
 }
